# cmlibs.maths

./: README.rst  pyproject.toml  setup.py
.github/workflows/: changelog.yaml  create-release.yaml  deploy.yaml
docs/: conf.py  index.rst
src/cmlibs/maths/: __init__.py  algorithms.py  vectorops.py
tests/: test_octree.py  test_vectorops.py
